--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfoliosite",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://raymondmutyaba.com/cars-project",
   "dependencies": {
     "chart.js": "^2.7.3",
     "react": "^16.5.1",
